# midiGlow

./: .gitignore  CMakeLists.txt  LICENSE  build.sh
Documents/: System Architecture.drawio
config/: config.json
libs/IActuator/: CMakeLists.txt  IActuator.h
libs/LedController/: CMakeLists.txt
libs/MidiHandler/: CMakeLists.txt  MidiHandler.cpp  MidiHandler.h
libs/MidiToLed/: CMakeLists.txt
libs/RotaryEncoder/: CMakeLists.txt  RotaryEncoder.cpp  RotaryEncoder.h
libs/ws281x/: CMakeLists.txt  ws281x.cpp  ws281x.h
src/: main.cpp
